# cmake-interfacelib-pch-bug

./: .gitignore  CMakeLists.txt  main.cpp
lib1/: lib1.cpp  lib1.h
